--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
-body{
+body {
     font-family: 'urban grotesk';
+}
+
+.link-custom {
+    color: blue;
 }
